fix anchor tag contrast

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -52,11 +52,12 @@ h1, h2, h3 {
 }
 
 a {
-    color: #1481b8;
+    color: black;
+    font-weight: bold;
 }
 
 a:visited {
-    color: #1481b8;
+    color: black;
 }
 
 code, pre, tt, kbd, samp {
@@ -118,7 +119,6 @@ header::after {
 }
 
 header a, header a:visited {
-    color: black;
     text-decoration: none;
 }
 
@@ -151,6 +151,14 @@ nav {
 nav > span {
     position: relative;
     padding: 10px min(5%, 40px) 0;
+}
+
+nav > span > a {
+    font-weight: normal;
+}
+
+#selected-tab > a {
+    font-weight: bold;
 }
 
 #selected-tab::before {
